# unified-text2sql-benchmark

./: .gitignore  README.md  pyproject.toml
original/: download.sh
scripts/: prepare_acl_sql.py  prepare_cosql.py  prepare_criteriasql.py  prepare_dbqa.py  prepare_fiben.py  prepare_paraphrase_bench.py  prepare_sede.py  prepare_seoss.py  prepare_sparc.py  prepare_spider.py  prepare_spider_dk.py  prepare_spider_syn.py  prepare_squall.py  prepare_wikisql.py  prepare_xsp.py  schema_generator.py  sqlite3_keywords.txt  squall_table_to_used_derived_columns
stats/: generate_statistics.py
